--- a/index.html
+++ b/index.html
@@ -4,102 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-<link rel="stylesheet" href="styles/normalize.css">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
     <div class="page">
         <header class="header">
-            <div class="logo logo_place_header">
-                <a href="index.html"><img src="images/logo.svg" alt="logo"></a>
-            </div>
-            <div class="header__title">
-                <h1>Научиться <br> учиться</h1>
-            </div>
-            <div class="header__subtitle">
-                <h3>Какие современные и эффективные подходы<br> к
-                     обучению вы можете использовать в своей<br> жизни?</h3>
-                    <a href="#" class="header__link">Узнать &#8594 </a>
-            </div>
-            
-            <div class="header__main-illustration"><img src="images/two_again.png" 
-                alt="two_again"></div>
+                <a href="index.html" class="logo logo_place_header"><img src="images/logo.svg" alt="logo"></a>
+                <h1 class="header__title">Научиться учиться</h1>
+                <p class="header__subtitle">Какие современные и эффективные подходы к
+                     обучению вы можете использовать в своей жизни? 
+                     <a href="#" class="header__link">Узнать &#8594 </a></p>
+            <img src="images/two_again.png" alt="two_again" class="header__main-illustration">
             <div class="header__square-pic"></div>
         </header>
         <main class="content">
             <section class="description">
                 <div class="two-columns">
-                    <div class="two-columns__brief">
-                        <p>Главные проблемы<br> в обучении</p>
-                    </div>
-                    <div class="two-columns__main-text">
-                        <div class="two-columns__paragraph">
-                            <p>Ни в школе, ни в институте нас не учат тому, как правильно 
-                                изучать материал. Мы <br> готовимся к экзаменам и учим билеты. 
-                                Мы тренируемся решать однообразные задачи,<br> чтобы лучше 
+                    <p class="two-columns__brief">Главные проблемы в обучении</p>
+                <div class="two-columns__main-text">
+                    <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно 
+                                изучать материал. Мы готовимся к экзаменам и учим билеты. 
+                                Мы тренируемся решать однообразные задачи, чтобы лучше 
                                 сдать тест, но часто в итоге это не дает нам реального 
-                                знания. Зубрежка<br> быстро выветривается и не приносит 
+                                знания. Зубрежка быстро выветривается и не приносит 
                                 пользы.</p>
-                        </div>
-                        <div class="two-columns__paragraph">
-                            <p><b>Вывод:</b> учиться тоже нужно уметь, но почему-то этому мало 
+                    <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало 
                                 где учат. Что с этим делать?</p>
-                        <div class="two-columns__paragraph">
-                            <p>Конкретные техники и упражнения помогают изменить подход 
-                                к обучению, сделать его<br> эффективным и захватывающим. 
-                                Эти же техники применяются на примере обучения в<br> Практикуме.</p>
-                        </div>
-                        </div>
-                    </div>
+                    <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход 
+                                к обучению, сделать его эффективным и захватывающим. 
+                                Эти же техники применяются на примере обучения в Практикуме.</p>
+                </div>
                 </div>
             </section>
             <section class="digits">
-                <div class="section-title">
-                    <h2>Цифры и факты</h2>
-                </div>
-                <div class="section-subtitle">
-                    <p>Про учёбу и мозг</p>
-                </div>
+                <h2 class="section-title">Цифры и факты</h2>
+                <p class="section-subtitle">Про учёбу и мозг</p>
                 <div class="table">
                     <div class="table__cell">
-                        <div class="table__heading"><h4>86 миллиардов</h4></div>
-                        <div class="table__text"><p>Число нейронов в мозге человека</p></div>
+                        <h4 class="table__heading">86 миллиардов</h4>
+                        <p class="table__text">Число нейронов в мозге человека</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>2.1 миллиарда
-                        </h4></div>
-                        <div class="table__text">
-                            <p class="second-cell">Число нуждающихся в повышении квалификации</p>
-                            <p>Всемирный Банк, 2017</p>
-                        </div>
+                        <h4 class="table__heading">2.1 миллиарда
+                        </h4>
+                        <p class="table__text second-cell">Число нуждающихся в повышении квалификации</p>
+                        <p class="table__text">Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>1000 терабайт</h4></div>
-                        <div class="table__text"><p>Объём памяти человека</p></div>
+                        <h4 class="table__heading">1000 терабайт</h4>
+                        <p class="table__text">Объём памяти человека</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>500 триллионов</h4></div>
-                        <div class="table__text"><p>Число ответственных за обучение нервных 
-                            синапсов у взрослого человека</p></div>
+                        <h4 class="table__heading">500 триллионов</h4>
+                        <p class="table__text">Число ответственных за обучение нервных 
+                            синапсов у взрослого человека</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>420 миллионов</h4></div>
-                        <div class="table__text"><p>Число взрослых людей моложе 25 лет, не имеющих 
+                        <h4 class="table__heading">420 миллионов</h4>
+                        <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих 
                             образования для трудоустройства</p>
-                            <p>Всемирный Банк, 2017</p>
-                        </div>
+                        <p>Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>17–20 лет</h4></div>
-                        <div class="table__text"><p>Пик обучаемости</p></div>
+                        <h4 class="table__heading">17–20 лет</h4>
+                        <p class="table__text">Пик обучаемости</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>1885 год</h4></div>
-                        <div class="table__text"><p>Открытие кривой забывания</p></div>
+                        <h4 class="table__heading">1885 год</h4>
+                        <p class="table__text">Открытие кривой забывания</p>
                     </div>
                     <div class="table__cell">
-                        <div class="table__heading"><h4>1889 год</h4></div>
-                        <div class="table__text"><p>Открытие условного рефлекса</p></div>
+                       <h4 class="table__heading">1889 год</h4>
+                        <p class="table__text">Открытие условного рефлекса</p>
                     </div>
                 </div>
             </section>
@@ -113,91 +90,85 @@
                 <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
                 <div class="table table_theme_dark">
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>1</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Выберите привлекательный проект.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">1</h4>
+                    <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>2</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Сосредоточьтесь на каком-то 
-                        одном навыке.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">2</h4>
+                   <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то 
+                        одном навыке.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>3</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Определите целевой 
-                        уровень мастерства.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">3</h4>
+                   <p class="table__text table__text_theme_dark">Определите целевой 
+                        уровень мастерства.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>4</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Разбейте навык на элементы.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">4</h4>
+                   <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>5</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Приготовьте всё необходимое 
-                        для занятий.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">5</h4>
+                    <p class="table__text table__text_theme_dark">Приготовьте всё необходимое 
+                        для занятий.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>6</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Устраните препятствия 
-                        для занятий.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">6</h4>
+                    <p class="table__text table__text_theme_dark">Устраните препятствия 
+                        для занятий.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>7</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Выделите специальное 
-                        время для занятий.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">7</h4>
+                    <p class="table__text table__text_theme_dark">Выделите специальное 
+                        время для занятий.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>8</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Создайте быстрые 
-                        петли обратной связи.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">8</h4>
+                    <p class="table__text table__text_theme_dark">Создайте быстрые 
+                        петли обратной связи.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>9</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Занимайтесь по расписанию, 
-                        короткими интенсивными интервалами.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">9</h4>
+                    <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, 
+                        короткими интенсивными интервалами.</p>
                 </div>
                 <div class="table__cell table__cell_theme_dark">
-                    <div class="table__heading table__heading_theme_dark"><h4>10</h4></div>
-                    <div class="table__text table__text_theme_dark"><p>Уделяйте внимание количеству 
-                        и скорости.</p></div>
+                    <h4 class="table__heading table__heading_theme_dark">10</h4>
+                    <p class="table__text table__text_theme_dark">Уделяйте внимание количеству 
+                        и скорости.</p>
                 </div>
                 </div>
-                <div class="kaufman__triangle">
-                    <img src="images/triangle.svg" alt="triangle">
-                </div>
+                <img class="kaufman__triangle" src="images/triangle.svg" alt="triangle">
             </section>
         </main>
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column_content_copyright">
-                    <div class="logo logo_place_footer"><a href="index.html">
-                        <img src="images/logo_white.svg" alt="logo"></a></div>
-                    <div class="footer__author"><span>&copy 2020. Yulia Fokina</span></div> 
+                <div class="footer__column-content_copyright">
+                    <a href="index.html" class="logo logo_place_footer">
+                        <img src="images/logo_white.svg" alt="logo"></a>
+                    <p class="footer__author">&copy 2020. Yulia Fokina</p>
                 </div>
-                <div class="footer__column_content_info">
-                    <div class="footer__column-heading"><span>О Практикуме</span></div>
-                    <div class="footer__column-links">
-                        <a href="#">Главная</a>
-                        <a href="#">Концепция</a>
-                        <a href="#">Наставники</a>
-                    </div>
+                <div class="footer__column-content_info">
+                    <h6 class="footer__column-heading">О Практикуме</h6>
+                    <ul>
+                        <li class="footer__column-links"><a class="footer__column-links" href="#">Главная</a></li>
+                        <li class="footer__column-links"><a class="footer__column-links" href="#">Концепция</a></li>
+                        <li class="footer__column-links"><a class="footer__column-links" href="#">Наставники</a></li>
+                    </ul>
                 </div>
-                <div class="footer__column_content_social">
-                    <span class="p">Соцсети</span>
-                    <div class="footer__social-icon">
-                        <a href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
-                        <img src="images/facebook_white.svg" alt="facebook-icon"> 
-                        <span>Facebook</span></a>
-                    </div>
-                    <div class="footer__social-icon">
-                        <a href="https://vk.com/">
-                        <img src="images/vk_white.svg" alt="vk-icon"> 
-                        <span>ВКонтакте</span></a>
-                    </div>
-                    <div class="footer__social-icon">
-                        <a href="https://www.instagram.com/iuliiafokina908/">
-                        <img src="images/instagram_white.svg" alt="instagram-icon"> 
-                        <span>Instagram</span></a>
-                    </div>
+                <div class="footer__column-content_social">
+                    <h6 class="footer__column-heading">Соцсети</h6> 
+                    <ul>
+                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
+                            <img src="images/facebook_white.svg" alt="facebook-icon"> 
+                            <span>Facebook</span></a></li>
+                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://vk.com/">
+                            <img src="images/vk_white.svg" alt="vk-icon"> 
+                            <span>ВКонтакте</span></a></li>
+                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://www.instagram.com/iuliiafokina908/">
+                            <img src="images/instagram_white.svg" alt="instagram-icon"> 
+                            <span>Instagram</span></a></li>
+                    </ul>
                 </div>
             </div>
         </footer>
