--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <h4 class="table__heading">420 миллионов</h4>
                         <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих 
                             образования для трудоустройства</p>
-                        <p>Всемирный Банк, 2017</p>
+                        <p class="table__text">Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
                         <h4 class="table__heading">17–20 лет</h4>
@@ -143,32 +143,36 @@
         </main>
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column-content_copyright">
+                <div class="footer__column footer__column-content_copyright">
                     <a href="index.html" class="logo logo_place_footer">
                         <img src="images/logo_white.svg" alt="logo"></a>
                     <p class="footer__author">&copy 2020. Yulia Fokina</p>
                 </div>
-                <div class="footer__column-content_info">
-                    <h6 class="footer__column-heading">О Практикуме</h6>
-                    <ul>
-                        <li class="footer__column-links"><a class="footer__column-links" href="#">Главная</a></li>
-                        <li class="footer__column-links"><a class="footer__column-links" href="#">Концепция</a></li>
-                        <li class="footer__column-links"><a class="footer__column-links" href="#">Наставники</a></li>
+                <div class="footer__column footer__column-content_info">
+                    <h6 class="footer__column footer__column-heading">О Практикуме</h6>
+                    <nav class="footer__column footer__column-content_info">
+                    <ul class="footer__column footer__column-links">
+                        <li><a class="footer__column footer__column-link" href="#">Главная</a></li>
+                        <li><a class="footer__column footer__column-link" href="#">Концепция</a></li>
+                        <li><a class="footer__column footer__column-link" href="#">Наставники</a></li>
                     </ul>
+                </nav>
                 </div>
-                <div class="footer__column-content_social">
-                    <h6 class="footer__column-heading">Соцсети</h6> 
-                    <ul>
-                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
-                            <img src="images/facebook_white.svg" alt="facebook-icon"> 
+                <div class="footer__column footer__column-content_social">
+                    <h6 class="footer__column footer__column-heading">Соцсети</h6> 
+                    <nav class="footer__column footer__column-content_social">
+                    <ul class="footer__column footer__column-links">
+                        <li><a class="footer__column footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
+                            <img class="footer__social-icon" src="images/facebook_white.svg" alt="facebook-icon"> 
                             <span>Facebook</span></a></li>
-                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://vk.com/">
-                            <img src="images/vk_white.svg" alt="vk-icon"> 
+                        <li><a class="footer__column footer__column-link" href="https://vk.com/">
+                            <img class="footer__social-icon" src="images/vk_white.svg" alt="vk-icon"> 
                             <span>ВКонтакте</span></a></li>
-                        <li class="footer__social-icon"><a class="footer__social-icon" href="https://www.instagram.com/iuliiafokina908/">
-                            <img src="images/instagram_white.svg" alt="instagram-icon"> 
+                        <li><a class="footer__column footer__column-link" href="https://www.instagram.com/iuliiafokina908/">
+                            <img class="footer__social-icon" src="images/instagram_white.svg" alt="instagram-icon"> 
                             <span>Instagram</span></a></li>
                     </ul>
+                </nav>
                 </div>
             </div>
         </footer>
