--- a/index.html
+++ b/index.html
@@ -46,9 +46,8 @@
                         <p class="table__text">Число нейронов в мозге человека</p>
                     </div>
                     <div class="table__cell">
-                        <h4 class="table__heading">2.1 миллиарда
-                        </h4>
-                        <p class="table__text second-cell">Число нуждающихся в повышении квалификации</p>
+                        <h4 class="table__heading">2.1 миллиарда</h4>
+                        <p class="table__text">Число нуждающихся в повышении квалификации</p>
                         <p class="table__text">Всемирный Банк, 2017</p>
                     </div>
                     <div class="table__cell">
@@ -143,36 +142,32 @@
         </main>
         <footer class="footer">
             <div class="footer__columns">
-                <div class="footer__column footer__column-content_copyright">
+                <div class="footer__column footer__column_content_copyright">
                     <a href="index.html" class="logo logo_place_footer">
                         <img src="images/logo_white.svg" alt="logo"></a>
                     <p class="footer__author">&copy 2020. Yulia Fokina</p>
                 </div>
-                <div class="footer__column footer__column-content_info">
-                    <h6 class="footer__column footer__column-heading">О Практикуме</h6>
-                    <nav class="footer__column footer__column-content_info">
-                    <ul class="footer__column footer__column-links">
-                        <li><a class="footer__column footer__column-link" href="#">Главная</a></li>
-                        <li><a class="footer__column footer__column-link" href="#">Концепция</a></li>
-                        <li><a class="footer__column footer__column-link" href="#">Наставники</a></li>
+                <div class="footer__column footer__column_content_info">
+                    <h6 class="footer__column-heading">О Практикуме</h6>
+                    <ul class="footer__column-links">
+                        <li><a class="footer__column-link" href="#">Главная</a></li>
+                        <li><a class="footer__column-link" href="#">Концепция</a></li>
+                        <li><a class="footer__column-link" href="#">Наставники</a></li>
                     </ul>
-                </nav>
                 </div>
-                <div class="footer__column footer__column-content_social">
-                    <h6 class="footer__column footer__column-heading">Соцсети</h6> 
-                    <nav class="footer__column footer__column-content_social">
-                    <ul class="footer__column footer__column-links">
-                        <li><a class="footer__column footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
+                <div class="footer__column footer__column_content_social">
+                    <h6 class="footer__column-heading">Соцсети</h6> 
+                    <ul class="footer__column-links">
+                        <li><a class="footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
                             <img class="footer__social-icon" src="images/facebook_white.svg" alt="facebook-icon"> 
                             <span>Facebook</span></a></li>
-                        <li><a class="footer__column footer__column-link" href="https://vk.com/">
+                        <li><a class="footer__column-link" href="https://vk.com/">
                             <img class="footer__social-icon" src="images/vk_white.svg" alt="vk-icon"> 
                             <span>ВКонтакте</span></a></li>
-                        <li><a class="footer__column footer__column-link" href="https://www.instagram.com/iuliiafokina908/">
+                        <li><a class="footer__column-link" href="https://www.instagram.com/iuliiafokina908/">
                             <img class="footer__social-icon" src="images/instagram_white.svg" alt="instagram-icon"> 
                             <span>Instagram</span></a></li>
                     </ul>
-                </nav>
                 </div>
             </div>
         </footer>
