--- a/index.html
+++ b/index.html
@@ -4,24 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <div class="page">
         <header class="header">
-                <a href="index.html" class="logo logo_place_header"><img src="./blocks/header/images/logo.svg" alt="logo"></a>
+                <a href="index.html" class="logo logo_place_header"><img src="./blocks/header/images/logo.svg" alt="лого"></a>
                 <h1 class="header__title">Научиться учиться</h1>
                 <p class="header__subtitle">Какие современные и эффективные подходы к
                      обучению вы можете использовать в своей жизни?
-                     <a href="#" class="header__link">Узнать &#8594 </a></p>
+                     <a href="#" class="header__link">Узнать &#8594; </a></p>
             <img src="./blocks/header/images/two_again.png" alt="two_again" class="header__main-illustration">
             <div class="header__square-pic"></div>
         </header>
         <main class="content">
             <section class="description">
                 <div class="two-columns">
-                    <p class="two-columns__brief">Главные проблемы в обучении</p>
+                    <h3 class="two-columns__brief">Главные проблемы в обучении</h3>
                 <div class="two-columns__main-text">
                     <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно
                                 изучать материал. Мы готовимся к экзаменам и учим билеты.
@@ -42,31 +41,31 @@
               <p class="section-subtitle">Пять практик от Барбары Оакли</p>
               <div class="cards">
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/attention.png" alt="attention" class="cards__image">
+                  <img src="./blocks/technics/images/attention.png" alt="внимание" class="cards__image">
                   <h4 class="cards__title">Два вида внимания</h4>
                   <p class="cards__description">Глубокие знания возникают,
                     если чередовать сфокусированное и рассеянное мышление.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/recall.png" alt="recall" class="cards__image">
+                  <img src="./blocks/technics/images/recall.png" alt="память" class="cards__image">
                   <h4 class="cards__title">Recall</h4>
                   <p class="cards__description">Вспоминайте изученное — это позволит соединить
                     разрозненные порции памяти.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/interliving.png" alt="interliving" class="cards__image">
+                  <img src="./blocks/technics/images/interliving.png" alt="интерливинг" class="cards__image">
                   <h4 class="cards__title">Интерливинг</h4>
                   <p class="cards__description">Изучайте несколько навыков одновременно,
                     они обогащают друг друга.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/question.png" alt="questions" class="cards__image">
+                  <img src="./blocks/technics/images/question.png" alt="вопросы" class="cards__image">
                   <h4 class="cards__title">Вопросы</h4>
                   <p class="cards__description">Слушая преподавателя, придумывайте хороший
                     вопрос, который вас действительно волнует.</p>
                 </div>
                 <div class="cards__item">
-                  <img src="./blocks/technics/images/competence.png" alt="competence" class="cards__image">
+                  <img src="./blocks/technics/images/competence.png" alt="компетенция" class="cards__image">
                   <h4 class="cards__title">Иллюзия компетентности</h4>
                   <p class="cards__description">Повторите про себя, запишите, расскажите другу:
                     вам только кажется, что вы владеете новой темой.
@@ -78,17 +77,17 @@
               <h2 class="section-title">Видео на TED</h2>
               <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
               <div class="video__iframes">
-                <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+                <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope;
                 picture-in-picture" allowfullscreen></iframe>
-                <iframe class="video__iframe" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU"
-                frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope;
+                <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope;
                 picture-in-picture" allowfullscreen></iframe>
               </div>
             </section>
             <section class="oakley">
               <div class="two-columns">
-                <p class="two-columns__brief">История Барбары Оакли.</p>
+                <h3 class="two-columns__brief">История Барбары Оакли.</h3>
             <div class="two-columns__main-text">
                 <p class="two-columns__paragraph">С детства Барбаре не давалась математика.
                   Она считала себя законченным гуманитарием, причём далеко не самым умным.
@@ -99,11 +98,12 @@
                   гораздо глубже, чем у тех, кому всё ясно с первого взгляда.
                 </p>
             </div>
+            </div>
             </section>
             <section class="feinman">
               <h5 class="feinman__title">Метод Фейнмана</h5>
               <p class="feinman__subtitle">Выучить и не забыть.</p>
-              <a href="#" class="feinman__link">Подробнее &#8594</a>
+              <a href="#" class="feinman__link">Подробнее &#8594;</a>
             </section>
             <section class="digits">
                 <h2 class="section-title">Цифры и факты</h2>
@@ -160,8 +160,8 @@
                 <p class="khan__quote-author">Джордж Лукас</p>
                 <p class="knan__quote-author-subline">Кинорежиссер, продюсер</p>
                 <div class="khan__book-container">
-                  <img src="./blocks/khan/images/book.jpg" alt="khan_book" class="khan__book-pic">
-                  <a href="" class="khan__buy-link">Купить книгу &#8594</a>
+                  <img src="./blocks/khan/images/book.jpg" alt="книга Хана" class="khan__book-pic">
+                  <a href="" class="khan__buy-link">Купить книгу &#8594;</a>
                 </div>
               </div>
             </section>
@@ -218,16 +218,16 @@
                         и скорости.</p>
                 </div>
                 </div>
-                <img class="kaufman__triangle" src="./blocks/kaufman/images/triangle.svg" alt="triangle">
+                <img class="kaufman__triangle" src="./blocks/kaufman/images/triangle.svg" alt="треугольник">
             </section>
             <section class="resources">
               <h2 class="section-title">Полезные ресурсы</h2>
               <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
               <ul class="resources__logo-zone">
-                <li><a href="https://arzamas.academy/" class="resources__logo"><img src="./blocks/resources/images/arzamas.svg" alt="arzamas"></a></li>
-              <li><a href="https://nplus1.ru/" class="resources__logo"><img src="./blocks/resources/images/n1.svg" alt="n1"></a></li>
-            <li><a href="https://strelka.com/" class="resources__logo"><img src="./blocks/resources/images/strelka.svg" alt="strelka"></a></li>
-          <li><a href="https://polka.academy/" class="resources__logo"><img src="./blocks/resources/images/polka.svg" alt="polka"></a></li>
+                <li><a href="https://arzamas.academy/"><img class="resources__logo" src="./blocks/resources/images/arzamas.svg" alt="арзамас"></a></li>
+              <li><a href="https://nplus1.ru/"><img class="resources__logo" src="./blocks/resources/images/n1.svg" alt="н1"></a></li>
+            <li><a href="https://strelka.com/"><img class="resources__logo" src="./blocks/resources/images/strelka.svg" alt="стрелка"></a></li>
+          <li><a href="https://polka.academy/"><img class="resources__logo" src="./blocks/resources/images/polka.svg" alt="полка"></a></li>
               </ul>
             </section>
         </main>
@@ -235,31 +235,31 @@
             <div class="footer__columns">
                 <div class="footer__column footer__column_content_copyright">
                     <a href="index.html" class="logo logo_place_footer">
-                        <img src="./blocks/footer/images/logo_white.svg" alt="logo"></a>
+                        <img src="./blocks/footer/images/logo_white.svg" alt="лого"></a>
                     <p class="footer__author">&copy 2020. Yulia Fokina</p>
                 </div>
-                <div class="footer__column footer__column_content_info">
+                <nav class="footer__column footer__column_content_info">
                     <h6 class="footer__column-heading">О Практикуме</h6>
                     <ul class="footer__column-links">
                         <li><a class="footer__column-link" href="#">Главная</a></li>
                         <li><a class="footer__column-link" href="#">Концепция</a></li>
                         <li><a class="footer__column-link" href="#">Наставники</a></li>
                     </ul>
-                </div>
-                <div class="footer__column footer__column_content_social">
+                </nav>>
+                <nav class="footer__column footer__column_content_social">
                     <h6 class="footer__column-heading">Соцсети</h6>
                     <ul class="footer__column-links">
                         <li><a class="footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
-                            <img class="footer__social-icon" src="./blocks/footer/images/facebook_white.svg" alt="facebook-icon">
-                            <span>Facebook</span></a></li>
+                            <img class="footer__social-icon" src="./blocks/footer/images/facebook_white.svg" alt="фейсбук">
+                            Facebook</a></li>
                         <li><a class="footer__column-link" href="https://vk.com/">
-                            <img class="footer__social-icon" src="./blocks/footer/images/vk_white.svg" alt="vk-icon">
-                            <span>ВКонтакте</span></a></li>
+                            <img class="footer__social-icon" src="./blocks/footer/images/vk_white.svg" alt="вконтакте">
+                            ВКонтакте</a></li>
                         <li><a class="footer__column-link" href="https://www.instagram.com/iuliiafokina908/">
-                            <img class="footer__social-icon" src="./blocks/footer/images/instagram_white.svg" alt="instagram-icon">
-                            <span>Instagram</span></a></li>
+                            <img class="footer__social-icon" src="./blocks/footer/images/instagram_white.svg" alt="инстаграм">
+                            Instagram</a></li>
                     </ul>
-                </div>
+                </nav>>
             </div>
         </footer>
     </div>
