--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <p class="header__subtitle">Какие современные и эффективные подходы к
                      обучению вы можете использовать в своей жизни?
                      <a href="#" class="header__link">Узнать &#8594; </a></p>
-            <img src="./blocks/header/images/two_again.png" alt="two_again" class="header__main-illustration">
+            <img src="./blocks/header/images/two_again.png" alt="опять двойка" class="header__main-illustration">
             <div class="header__square-pic"></div>
         </header>
         <main class="content">
@@ -236,7 +236,7 @@
                 <div class="footer__column footer__column_content_copyright">
                     <a href="index.html" class="logo logo_place_footer">
                         <img src="./blocks/footer/images/logo_white.svg" alt="лого"></a>
-                    <p class="footer__author">&copy 2020. Yulia Fokina</p>
+                    <p class="footer__author">&copy; 2020. Yulia Fokina</p>
                 </div>
                 <nav class="footer__column footer__column_content_info">
                     <h6 class="footer__column-heading">О Практикуме</h6>
@@ -245,7 +245,7 @@
                         <li><a class="footer__column-link" href="#">Концепция</a></li>
                         <li><a class="footer__column-link" href="#">Наставники</a></li>
                     </ul>
-                </nav>>
+                </nav>
                 <nav class="footer__column footer__column_content_social">
                     <h6 class="footer__column-heading">Соцсети</h6>
                     <ul class="footer__column-links">
@@ -259,7 +259,7 @@
                             <img class="footer__social-icon" src="./blocks/footer/images/instagram_white.svg" alt="инстаграм">
                             Instagram</a></li>
                     </ul>
-                </nav>>
+                </nav>
             </div>
         </footer>
     </div>
