--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Научиться учиться</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body>
     <div class="page">
@@ -101,7 +101,7 @@
             </div>
             </section>
             <section class="feinman">
-              <h5 class="feinman__title">Метод Фейнмана</h5>
+              <h1 class="feinman__title">Метод Фейнмана</h1>
               <p class="feinman__subtitle">Выучить и не забыть.</p>
               <a href="#" class="feinman__link">Подробнее &#8594;</a>
             </section>
@@ -239,7 +239,7 @@
                     <p class="footer__author">&copy; 2020. Yulia Fokina</p>
                 </div>
                 <nav class="footer__column footer__column_content_info">
-                    <h6 class="footer__column-heading">О Практикуме</h6>
+                    <h4 class="footer__column-heading">О Практикуме</h4>
                     <ul class="footer__column-links">
                         <li><a class="footer__column-link" href="#">Главная</a></li>
                         <li><a class="footer__column-link" href="#">Концепция</a></li>
@@ -247,7 +247,7 @@
                     </ul>
                 </nav>
                 <nav class="footer__column footer__column_content_social">
-                    <h6 class="footer__column-heading">Соцсети</h6>
+                    <h4 class="footer__column-heading">Соцсети</h4>
                     <ul class="footer__column-links">
                         <li><a class="footer__column-link" href="https://www.facebook.com/yulia.fokina.735?ref=bookmarks">
                             <img class="footer__social-icon" src="./blocks/footer/images/facebook_white.svg" alt="фейсбук">
