--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
                 <p class="header__subtitle">Какие современные и эффективные подходы к
                      обучению вы можете использовать в своей жизни?
                      <a href="#" class="header__link">Узнать &#8594; </a></p>
-            <img src="./blocks/header/images/two_again.png" alt="опять двойка" class="header__main-illustration">
-            <div class="header__square-pic"></div>
+                 <img src="./blocks/header/images/two_again.png" alt="опять двойка" class="header__main-illustration">
+                <div class="rotation">
+                 <div class="header__square-pic"></div>
+                </div>
         </header>
         <main class="content">
             <section class="description">
@@ -218,7 +220,9 @@
                         и скорости.</p>
                 </div>
                 </div>
+                <div class="rotation">
                 <img class="kaufman__triangle" src="./blocks/kaufman/images/triangle.svg" alt="треугольник">
+                </div>
             </section>
             <section class="resources">
               <h2 class="section-title">Полезные ресурсы</h2>
